name:                ecc-manifold
version:             0.1.0
synopsis:            Framework for testing Error Checking Codes.
description:         Support for testing ECCs, including some data structures 
                     commonly uses, like bit matrixes.
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          Andy Gill <andygill@ku.edu>
copyright:           (C) 2013 The University of Kansas
category:            Codec
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
                Data.Bit,
                ECC.Code.BPSK,
                ECC.Code.Repetition,
                ECC.Types,
                ECC.Utils

  build-depends:
                array           == 0.4.*,
                base            == 4.6.*,
                mtl             == 2.1.*,
                mwc-random      == 0.13.*,
                statistics      == 0.10.*,
                vector          == 0.10.*

  main-is: main/Main.hs
  hs-source-dirs:      src

executable ecc-manifold-tester
  build-depends:
                array           == 0.4.*,
                base            == 4.6.*,
                mtl             == 2.1.*,
                mwc-random      == 0.13.*,
                statistics      == 0.10.*,
                vector          == 0.10.*,
                ecc-manifold    ==0.1.0
  main-is: Main.hs
  hs-source-dirs: src, main
  Ghc-options: -O2 -threaded 

